css/style.css
:root{
  --gap:12px;
  --neutral:#f5f7fb;
  --green:#7dd691;
  --red:#bd6666;
  --card: rgb(216, 206, 216);
  --accent: #000000;

}
/* all elements get a border-box */
*{box-sizing:border-box}

body{
  font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial;
  margin:20px;
  background:var(--neutral);
  color:#111;
}

/* Grid layout for the whole page */
.container {
  width: 100%;
  max-width: var(--max);
  display: grid;
  gap: var(--gap);
  grid-template-rows: auto 1fr auto;
  grid-template-columns: 1fr;
  min-height: 100vh;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: var(--card);
  padding: 10px;
  border-radius: 8px;
  position: sticky; /* lock when scrolling */
  top: 0;
  z-index: 1000;
}

/* profile photo styling to be round avatar */
.avatar {
  width: 20%;
  height: auto;
  border-radius: 50%;
  display: auto;
}

.name {
  font-size: 50px;
  background: -webkit-linear-gradient(#ca3aca, #4e80cc, rgb(241, 241, 250));
  background-clip: text; /* for non-webkit browsers */
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}


nav a {
  margin-left: 16px;
  color: var(--accent);

}

/* Main layout- 2 column grid */
main {
  display: grid;
  grid-template-columns: 1fr 240px;
  gap: var(--gap);
}

/* Projects layout - auto-fit grid */
.projects {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: var(--gap);
}
.card {
  background: var(--card);
  padding: 12px;
  border-radius: 6px;
  display: flex;
  flex-direction: column;
  gap: 8px;
}
.card:hover { 
  background: var(--red); 
} 

/* nth-child psuedo-class for styling every other card different */
.card:hover:nth-child(odd) { 
  background: var(--green); 
} 

.thumb {
  height: 80px;
  width: 100%;
  background: #e0e7ff;
  display: grid;
  place-items: center;
  border-radius: 4px;
  object-fit: cover;
}
.link {
  margin-top: auto;
  color: var(--accent);
  text-decoration: none;
}

/* hover effect for links - pseudo-class */
.link:hover { 
  text-decoration: underline; 
  text-shadow: 0 0 5px var(--accent);
}
.contacts:hover { 
  text-decoration: underline; 
  text-shadow: 0 0 5px var(--accent);
}

/* sidebar */
aside {
  background: rgba(48, 82, 177, 0.322);
  padding: 12px;
  border-radius: 6px;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  gap: 10px;
  
}

/* profile photo styling to be round avatar */
.avatar {
  width: 100%;
  height: auto;
  border-radius: 50%;
  display: auto;
}
.bio {
  font-style: italic;
  color: var(--muted);
  padding: 12px;
  border-radius: 6px;
  display: flex;
  flex-direction: column;
  gap: 8px;
  background-color: var(--neutral);
}

/* image styling */
.thumb {
  width: 100%;
  height: 100%;
  border-radius: 6px;
  display: block;
}

.contacts a {
  display: block;
  color: var(--muted);
  padding: 4px 0;
}

button {
  margin-top: 12px;
  padding: 8px 12px;
  border: none;
  border-radius: 4px;
  background: var(--accent);
  color: #fff;
  cursor: pointer;
  text-align: center;
}

/* Footer flex*/
footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: var(--card);
  padding: 10px;
  border-radius: 6px;
  margin-top: 8px;
  font-weight: bold;
}


/* Resume buttton effects */
.btn-resume {
  background-color: transparent;
  color: #9b59b6;
  border: 2px solid #9b59b6;
  position: relative;
  width: 220px;
  height: 40px;
  cursor: pointer;
}

.btn-resume::after {
  content: "";
  position: absolute;
  width: 0;
  height: 100%;
  top: 0;
  left: 0;
  background-color: #9b59b6;
  transition: width 0.3s ease;
  z-index: -1;
}

.btn-resume:hover::after {
  width: 100%;
}

.btn-resume:hover {
  color: white;
}








/* testing glowing button effect */
.glow-on-hover {
    width: 220px;
    height: 50px;
    border: none;
    outline: none;
    color: #fff;
    background: #111;
    cursor: pointer;
    position: relative;
    z-index: 0;
    border-radius: 10px;
}


.glow-on-hover:before {
    content: '';
    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
    position: absolute;
    top: -2px;
    left:-2px;
    background-size: 400%;
    z-index: -1;
    filter: blur(5px);
    width: calc(100% + 4px);
    height: calc(100% + 4px);
    animation: glowing 20s linear infinite;
    opacity: 0;
    transition: opacity .3s ease-in-out;
    border-radius: 10px;
}

.glow-on-hover:active {
    color: #000
}

.glow-on-hover:active:after {
    background: transparent;
}

.glow-on-hover:hover:before {
    opacity: 1;
}

.glow-on-hover:after {
    z-index: -1;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    background: #111;
    left: 0;
    top: 0;
    border-radius: 10px;
}

@keyframes glowing {
    0% { background-position: 0 0; }
    50% { background-position: 400% 0; }
    100% { background-position: 0 0; }
}

